--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <div class="points">Punkty: 0</div>
     </header>
     <div class="category-container">
-        <h2>Wybierz kategorię:</h2>
+        <h2>Wybierz kategorię pytań:</h2>
         <div class="content">
-            <a href="kolo.html" class="linki">
+            <a href="gry.html" class="linki">
                 <div class="kategoria gry">
                     GRY
                 </div>
             </a>
-            <a href="kolo.html" class="linki">
+            <a href="filmy.html" class="linki">
                 <div class="kategoria filmy">
                     FILMY
                 </div>
