poprawiono wygląd itp

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Strona główna</a>
-            <a href="pytania.html">Pytania</a>
-            <span onclick='changeDifficultyLevel()' class="difficulty-level-button">Aktualny poziom trudności: <span id="difficulty"></span></span>
+            <a href="index.html" class="nav">Strona główna</a>
+            <a href="pytania.html" class="nav">Pytania</a>
+            <span onclick='changeDifficultyLevel()' class="difficulty-level-button nav">Aktualny poziom trudności: <span id="difficulty"></span></span>
         </nav>
         <div class="points">Punkty: 0</div>
     </header>
     <div class="category-container">
-        <h2>Wybierz kategorię pytań:</h2>
+        <div class="main-text">
+            <h1>Witaj na stronie z quizami o filmach i grach!</h1>
+            <h2>Wybierz kategorię pytań:</h2>
+        </div>
         <div class="content">
             <a href="gry.html" class="linki">
                 <div class="kategoria gry">
