--- a/pytania.html
+++ b/pytania.html
@@ -17,15 +17,14 @@
         <div class="points">Punkty: 0</div>
     </header>
     <div class="category-container-levels">
-        <h2>Spis wszystkim poziomów</h2>
-        Jeżeli odpowiedź na pytanie została już udzielona to będzie można podejrzeć pytanie wraz odpowiedziemi.
-        <div class="levels-content">
-            <a href="#pytanie1" class="linki">Pytanie 1</a>
-            <a href="#pytanie2" class="linki">Pytanie 2</a>
-            <a href="#pytanie3" class="linki">Pytanie 3</a>
-            <a href="#pytanie4" class="linki">Pytanie 4</a>
-            <a href="#pytanie5" class="linki">Pytanie 5</a>
+        <div class="main-text">
+            <h2>Spis wszystkim poziomów</h2>
+            Jeżeli odpowiedź na pytanie została już udzielona to będzie można podejrzeć pytanie wraz odpowiedziemi.
         </div>
+        <div class="questions-container" id="questions-container">
+    <h2>Lista wszystkich pytań:</h2>
+</div>
+
     </div>
 </body>
 <script src="script.js"></script>
