--- a/gry.html
+++ b/gry.html
@@ -13,14 +13,26 @@
             <a href="index.html">Strona główna</a>
             <a href="pytania.html">Pytania</a>
             <span onclick='changeDifficultyLevel()' class="difficulty-level-button">Aktualny poziom trudności: <span id="difficulty">Normalny</span></span>
-            <button onclick="resetQuiz()">Zresetuj grę</button>
+            <span onclick='resetQuiz()' class="reset-button">Zresetuj grę</span>
         </nav>
         <div class="points">Punkty: 0</div>
     </header>
     <div class="content">
         <div>
         </br></br></br></br></br>
-            <h1>Kategoria gry</h1>
+            <h1>Kategoria: gry</h1>
+            <!-- <span>
+                Możliwe bonusy:
+                <br>
+                niebieski - podpowiedź
+                <br>
+                żółty - brak bonusu
+                <br>
+                zielony - punkty x2
+                <br>
+                czerwony - ujemne punkty w przypadku złej odpowiedzi
+            </span> -->
+
         </br>
             <h1>Koło Nagród</h1>
             <div class="wheel-container" onclick="spin()">
