--- a/filmy.html
+++ b/filmy.html
@@ -13,22 +13,43 @@
             <a href="index.html">Strona główna</a>
             <a href="pytania.html">Pytania</a>
             <span onclick='changeDifficultyLevel()' class="difficulty-level-button">Aktualny poziom trudności: <span id="difficulty">Normalny</span></span>
+            <span onclick='resetQuiz()' class="reset-button">Zresetuj grę</span>
         </nav>
         <div class="points">Punkty: 0</div>
     </header>
     <div class="content">
         <div>
-        </br></br></br></br>
-            <h1>Kategoria filmy</h1>
+        </br></br></br></br></br>
+            <h1>Kategoria: filmy</h1>
+            <!-- <span>
+                Możliwe bonusy:
+                <br>
+                niebieski - podpowiedź
+                <br>
+                żółty - brak bonusu
+                <br>
+                zielony - punkty x2
+                <br>
+                czerwony - ujemne punkty w przypadku złej odpowiedzi
+            </span> -->
+
         </br>
             <h1>Koło Nagród</h1>
             <div class="wheel-container" onclick="spin()">
                 <div class="arrow"></div>
                 <div class="wheel"></div>
             </div>
+            <h1>Pytanie</h1>
+            <div class="pytania-odpowiedzi">
+                <span id="question"></span>
+            </div>
+            <h1>Odpowiedzi</h1>
+            <div class="pytania-odpowiedzi">
+                <span id="answers"></span>
+            </div>
         </div>
     </div>
 </body>
-<script src="script.js">
-</script>
+<script src="script.js"></script>
+<script src="filmy-script.js"></script>
 </html>
