--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>Witaj na stronie z quizami o filmach i grach!</h1>
             <h2>Wybierz kategorię pytań:</h2>
         </div>
-        <div class="content">
+        <div class="content-main">
             <a href="gry.html" class="linki">
                 <div class="kategoria gry">
                     GRY
