--- a/filmy.html
+++ b/filmy.html
@@ -20,7 +20,7 @@
     <div class="content">
         <div id="up">
             </br>
-            <h1>Kategoria: gry</h1>
+            <h1>Kategoria: filmy</h1>
         </div>
         <div id="left">
             <div id="blue">
