--- a/filmy.html
+++ b/filmy.html
@@ -65,5 +65,5 @@
     </div>
 </body>
 <script src="script.js"></script>
-<script src="gry-script.js"></script>
+<script src="filmy-script.js"></script>
 </html>
