--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
             <a href="index.html" class="nav">Strona główna</a>
             <a href="pytania.html" class="nav">Pytania</a>
             <span onclick='changeDifficultyLevel()' class="difficulty-level-button nav">Aktualny poziom trudności: <span id="difficulty"></span></span>
+            <label class="switch">
+            <input type="checkbox" id="theme-toggle">
+            <span class="slider">
+                <span class="icon sun">☀️</span>
+                <span class="icon moon">🌙</span>
+            </span>
+            </label>
         </nav>
         <div class="points">Punkty: 0</div>
     </header>
