--- a/filmy.html
+++ b/filmy.html
@@ -82,5 +82,5 @@
 
 </body>
 <script src="script.js"></script>
-<script src="gry-script.js"></script>
+<script src="filmy-script.js"></script>
 </html>
