--- a/pytania.html
+++ b/pytania.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="logo.jpg">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Quiz – Spis pytań</title>
+  <link rel="icon" type="image/png" href="logo.jpg">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html" class="nav">Strona główna</a>
-            <a href="pytania.html" class="nav">Pytania</a>
-            <span onclick='changeDifficultyLevel()' class="difficulty-level-button nav">Aktualny poziom trudności: <span id="difficulty"></span></span>
-        </nav>
-        <span onclick='resetQuiz()' class="reset-button">Zresetuj postęp</span>
-        <div class="theme">
-        <label class="switch">
-            <input type="checkbox" id="theme-toggle">
-            <span class="slider">
-                <span class="icon sun">☀️</span>
-                <span class="icon moon">🌙</span>
-            </span>
-            </label>
-        </div>
-        <div class="points">Punkty: 0</div>
-    </header>
-        <div class="category-container-levels">
-        <div class="main-text">
-            <h2>Spis wszystkim poziomów</h2>
-            Jeżeli odpowiedź na pytanie została już udzielona to będzie można podejrzeć pytanie wraz odpowiedziemi.
-        </div>
-        <div class="questions-container" id="questions-container">
-    <h2>Lista wszystkich pytań:</h2>
-</div>
-
+  <nav class="main-nav">
+    <div class="nav-left">
+      <a href="index.html" class="nav">Strona główna</a>
+      <a href="pytania.html" class="nav">Pytania</a>
+      <span onclick="changeDifficultyLevel()" class="difficulty-level-button nav">
+        Aktualny poziom trudności: <span id="difficulty"></span>
+      </span>
     </div>
+    <div class="nav-right">
+      <span onclick="resetQuiz()" class="reset-button">Zresetuj postęp</span>
+      <div class="theme">
+        <label class="switch">
+          <input type="checkbox" id="theme-toggle">
+          <span class="slider">
+            <span class="icon sun">☀️</span>
+            <span class="icon moon">🌙</span>
+          </span>
+        </label>
+      </div>
+      <div class="points">Punkty: <span id="points-count">0</span></div>
+    </div>
+  </nav>
+
+  <main class="category-container-levels">
+    <div class="main-text">
+      <h2>Spis pytań i odpowiedzi</h2>
+      <p>Jeżeli odpowiedź na pytanie została już udzielona, to będzie można podejrzeć pytanie wraz z odpowiedziami.</p>
+    </div>
+    <div class="questions-container" id="questions-container">
+    </div>
+  </main>
+
+  <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
