--- a/gry.html
+++ b/gry.html
@@ -1,86 +1,75 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="logo.jpg">
-    <style>
-        body {
-        overflow: hidden;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Quiz</title>
+  <link rel="icon" type="image/png" href="logo.jpg">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body { overflow: hidden; }
+  </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html" class="nav">Strona główna</a>
-            <a href="pytania.html" class="nav">Pytania</a>
-            <span onclick='changeDifficultyLevel()' class="difficulty-level-button nav">Aktualny poziom trudności: <span id="difficulty"></span></span>
-        </nav>
-        <span onclick='resetQuiz()' class="reset-button">Zresetuj postęp</span>
-        <div class="theme">
+  <nav class="main-nav">
+    <div class="nav-left">
+      <a href="index.html" class="nav">Strona główna</a>
+      <a href="pytania.html" class="nav">Pytania</a>
+      <span onclick="changeDifficultyLevel()" class="difficulty-level-button nav">
+        Aktualny poziom trudności: <span id="difficulty"></span>
+      </span>
+    </div>
+    <div class="nav-right">
+      <span onclick="resetQuiz()" class="reset-button">Zresetuj postęp</span>
+      <div class="theme">
         <label class="switch">
-            <input type="checkbox" id="theme-toggle">
-            <span class="slider">
-                <span class="icon sun">☀️</span>
-                <span class="icon moon">🌙</span>
-            </span>
-            </label>
-        </div>
-        <div class="points">Punkty: 0</div>
-    </header>
-    <div class="content">
-        <div id="up">
-            <h1>Kategoria pytań: gry</h1>
-        </div>
-        <div id="left">
-            <div id="blue" class="left">
-                Gracz dostaje podpowiedź dotyczącą pytania.
-            </div>
-            <div id="yellow" class="left">
-                Koło ratunkowe 50/50 - wyrzucone zostają dwie niepoprawne odpowiedzi.
-            </div>
-            <div id="green" class="left">
-                Punkty x2 po udzieleniu poprawnej odpowiedzi.
-            </div>
-            <div id="red" class="left">
-                Gracz dostaje -5 pkt w przypadku udzielenia niepoprawnej odpowiedzi.
-            </div>
-            <div id="bonus" class="left">
-                <h2>Zakręć kołem by wylosować bonus!</h2>
-            </div>
-        </div>
-        <div id="middle">
-            <h1>Koło Nagród</h1>
-            <div class="wheel-container" onclick="spin()">
-                <div class="arrow"></div>
-                <div class="wheel" id="wheel"></div>
-            </div>
-            <!-- <h1>Pytanie</h1>
-            <div class="pytania-odpowiedzi">
-                <span id="question"></span>
-            </div>
-            <h1>Odpowiedzi</h1>
-            <div class="pytania-odpowiedzi">
-                <span id="answers"></span>
-            </div> -->
-        </div>
-        <div id="right"></div>
+          <input type="checkbox" id="theme-toggle">
+          <span class="slider">
+            <span class="icon sun">☀️</span>
+            <span class="icon moon">🌙</span>
+          </span>
+        </label>
+      </div>
+      <div class="points">Punkty: <span id="points-count">0</span></div>
     </div>
+  </nav>
 
-    <div id="question-modal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <div id="modal-bonus"></div>
-            <h3 id="modal-hint"></h3>
-            <h2 id="modal-question"></h2>
-            <div id="modal-answers"></div>
+  <main class="content">
+    <section id="up">
+      <h1>Kategoria pytań: gry</h1>
+    </section>
+    <section class="panels">
+      <div id="left">
+        <div id="blue" class="left">Gracz dostaje podpowiedź dotyczącą pytania.</div>
+        <div id="yellow" class="left">Koło ratunkowe 50/50 - wyrzucone zostają dwie niepoprawne odpowiedzi.</div>
+        <div id="green" class="left">Punkty x2 po udzieleniu poprawnej odpowiedzi.</div>
+        <div id="red" class="left">Gracz dostaje -5 pkt w przypadku udzielenia niepoprawnej odpowiedzi.</div>
+        <div id="bonus" class="left">
+          <h2>Zakręć kołem by wylosować bonus!</h2>
         </div>
-    </div>
+      </div>
+      <div id="middle">
+        <h1>Koło Nagród</h1>
+        <div class="wheel-wrapper" onclick="spin()">
+          <div class="arrow"></div>
+          <div class="wheel" id="wheel"></div>
+        </div>
+      </div>
+      <div id="right"></div>
+    </section>
+  </main>
 
+  <div id="question-modal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <div id="modal-bonus"></div>
+      <h3 id="modal-hint"></h3>
+      <h2 id="modal-question"></h2>
+      <div id="modal-answers"></div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+  <script src="gry-script.js"></script>
 </body>
-<script src="script.js"></script>
-<script src="gry-script.js"></script>
 </html>
