--- a/gry.html
+++ b/gry.html
@@ -50,6 +50,7 @@
       </div>
       <div id="middle">
         <h1>Koło Nagród</h1>
+        <br><br><br>
         <div class="wheel-wrapper" onclick="spin()">
           <div class="arrow"></div>
           <div class="wheel" id="wheel"></div>
@@ -57,6 +58,9 @@
       </div>
       <div id="right"></div>
     </section>
+      <div class="footer">
+        <p>&copy;2025 Jan Kantor</p>
+      </div>
   </main>
 
   <div id="question-modal" class="modal">
