--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
     </div>
   </nav>
 
+  <div class="grid-container">
+	<div class="plane">
+		<div class="grid"></div>
+		<div class="glow"></div>
+	</div>
+	<div class="plane">
+		<div class="grid"></div>
+		<div class="glow"></div>
+	</div>
+</div>
+
   <main class="category-container">
     <div class="main-text">
       <h1>Witaj na stronie z quizami o filmach i grach!</h1>
@@ -39,10 +50,15 @@
     </div>
     <div class="content-main">
       <a href="gry.html" class="linki">
-        <div class="kategoria gry"></div>
+        <div class="kategoria gry">
+
+        </div>
       </a>
+      <img class="neo" src="backgrounds/neo.png">
       <a href="filmy.html" class="linki">
-        <div class="kategoria filmy"></div>
+        <div class="kategoria filmy">
+          
+        </div>
       </a>
     </div>
   </main>
