--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <div class="kategoria filmy"></div>
       </a>
     </div>
+    <div class="footer">
+      <p>&copy;2025 Jan Kantor</p>
+    </div>
   </main>
 
   <script src="script.js"></script>
