--- a/pytania.html
+++ b/pytania.html
@@ -38,6 +38,9 @@
     </div>
     <div class="questions-container" id="questions-container">
     </div>
+    <div class="footer pytania-footer">
+      <p>&copy;2025 Jan Kantor</p>
+    </div>
   </main>
 
   <script src="script.js"></script>
