--- a/gry.html
+++ b/gry.html
@@ -9,6 +9,12 @@
   <style>
     body { overflow: hidden; }
   </style>
+  <audio id="Audio-wrong">
+  <source src="source/wrong.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="Audio-correct">
+  <source src="source/correct.mp3" type="audio/mpeg">
+  </audio>
 </head>
 <body>
   <nav class="main-nav">
